# trident_playground

./: LICENSE  README.md  pyproject.toml
notebooks/: plotting_moe_routing.ipynb  trident_routing_playground.ipynb
src/: __init__.py
src/models/: TridentMOELayer.py  __init__.py
src/utils/: __init__.py  trident.py
tests/: routing_sparsity_v1.py
