[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trident_playground"
version = "0.1.0"
description = "Playground for trident framework"
authors = [{ name = "Vikrant Jaltare", email = "vjaltare@ucsd.edu" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

[tool.hatch.build.targets.wheel]
packages = ["src/models"]